--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "d01db2ab",
+   "cell_type": "markdown",
+   "id": "545ee524",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##Loan Approval Prediction Model##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "2b5623d1",
    "metadata": {},
    "outputs": [],
@@ -34,7 +32,7 @@
     "                    filename = 'model.log',force = True)\n",
     "# Import Scikit Learn Libraries for Machine Learning Model Building\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split,cross_val_score,GridSearchCV,learning_curve,KFold\n",
+    "from sklearn.model_selection import train_test_split,cross_val_score,KFold\n",
     "from sklearn.metrics import mean_squared_error,mean_absolute_error,r2_score\n",
     "import xgboost\n",
     "from sklearn.cluster import KMeans\n",
@@ -2397,22 +2395,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.696333</td>\n",
-       "      <td>[[14498, 4301], [4809, 6392]]</td>\n",
+       "      <td>0.695333</td>\n",
+       "      <td>[[14485, 4314], [4826, 6375]]</td>\n",
        "      <td>precision    recall  f1-score   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.727600</td>\n",
-       "      <td>[[12855, 5944], [2228, 8973]]</td>\n",
+       "      <td>0.727900</td>\n",
+       "      <td>[[12857, 5942], [2221, 8980]]</td>\n",
        "      <td>precision    recall  f1-score   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>GradientBoostingClassifier</td>\n",
-       "      <td>0.751800</td>\n",
-       "      <td>[[11388, 7411], [35, 11166]]</td>\n",
+       "      <td>0.751767</td>\n",
+       "      <td>[[11389, 7410], [37, 11164]]</td>\n",
        "      <td>precision    recall  f1-score   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2436,9 +2434,9 @@
       "text/plain": [
        "                   Model_Name  Accuracy_Score               Confusion_Matrix  \\\n",
        "0          LogisticRegression        0.709633  [[13204, 5595], [3116, 8085]]   \n",
-       "1      DecisionTreeClassifier        0.696333  [[14498, 4301], [4809, 6392]]   \n",
-       "2      RandomForestClassifier        0.727600  [[12855, 5944], [2228, 8973]]   \n",
-       "3  GradientBoostingClassifier        0.751800   [[11388, 7411], [35, 11166]]   \n",
+       "1      DecisionTreeClassifier        0.695333  [[14485, 4314], [4826, 6375]]   \n",
+       "2      RandomForestClassifier        0.727900  [[12857, 5942], [2221, 8980]]   \n",
+       "3  GradientBoostingClassifier        0.751767   [[11389, 7410], [37, 11164]]   \n",
        "4          AdaBoostClassifier        0.752067    [[11361, 7438], [0, 11201]]   \n",
        "5        KNeighborsClassifier        0.638733  [[14736, 4063], [6775, 4426]]   \n",
        "\n",
