--- a/Model.ipynb
+++ b/Model.ipynb
@@ -267,6 +267,7 @@
     }
    ],
    "source": [
+    "#data ingestion\n",
     "filepath = \"Data/credit-risk-data.csv\"\n",
     "df = pd.read_csv(filepath)\n",
     "df.head()"
